# event-profiling

./: README.md  docker-compose.yml  pyproject.toml
tracking-events/src/: generate_events.py  tracking_events.py
